--- a/MemoriKeeper/Views/Shared/_Layout.cshtml
+++ b/MemoriKeeper/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Memories</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="FileType" asp-action="Index">File Type</a>
+                        </li>
                     </ul>
                 </div>
             </div>
