--- a/MemoriKeeper/Views/FileType/index.cshtml
+++ b/MemoriKeeper/Views/FileType/index.cshtml
@@ -11,8 +11,8 @@
     </div>
 </div>
 <div class="row justify-content-center">
-    <div class="col-md-6">
-        <table class="table table-bordered">
+    <div class="col-md-4">
+        <table class="table table-bordered table-hover">
             <thead>
                 <tr>
                     <th>Id</th>
