Minor updated in applicationuser, filetypemodel class. Also UI updated for fileType

--- a/MemoriKeeper/Views/FileType/index.cshtml
+++ b/MemoriKeeper/Views/FileType/index.cshtml
@@ -14,7 +14,7 @@
     <div class="col-md-4">
         <table class="table table-bordered table-hover">
             <thead>
-                <tr>
+                <tr class="text-center">
                     <th>Id</th>
                     <th>File Type Name</th>
                 </tr>
@@ -24,7 +24,7 @@
                 {
                     <tr>
                         <td>@item.Id</td>
-                        <td>@item.TypeName</td>
+                        <td>@item.Name</td>
                     </tr>
                 }
             </tbody>
