--- a/MemoriKeeper/Views/Shared/_Layout.cshtml
+++ b/MemoriKeeper/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Diaryentry" asp-action="Index">Memory</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Diaryentry" asp-action="DeletedHistory">Deleted History</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Attachment" asp-action="Index">Attachment</a>
                         </li>
                         <li class="nav-item">
