--- a/MemoriKeeper/Views/Diaryentry/DeletedHistory.cshtml
+++ b/MemoriKeeper/Views/Diaryentry/DeletedHistory.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h5 class="text-center">Deleted Histoey</h5>
+        <h5 class="text-center">Deleted History</h5>
         <hr />
     </div>
 </div>
